# p3-timeseries-CMazuecos

./: README.md  pyproject.toml
notebook/: panama_load.ipynb
